solved issues on ios/mac safari: form elements overlapping one another or collapsing their height on keyboard; added labels to the phone country code & phone number to work on different rows;

--- a/package/src/styles.module.css
+++ b/package/src/styles.module.css
@@ -115,6 +115,10 @@ components
     flex-grow: 1;
 }
 
+.body > div,
+.body > footer {
+    flex-shrink: 0;
+}
 
 .body--full_screen:after {
     content: none;
@@ -251,6 +255,10 @@ components
     align-items: center;
 }
 
+.shrink-0 {
+    flex-shrink: 0;
+}
+
 .btn-default {
     background: none;
 	color: inherit;
@@ -260,6 +268,7 @@ components
 	cursor: pointer;
 	outline: inherit;
 }
+
 .btn-default:disabled {
     cursor: default;
     opacity: 0.5;
